# Linux_File_Manager

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
cmake/: PluginConfig.cmake
file_manager/core/: file_system.cpp  plugin_manager.cpp
file_manager/gui/: file_view.cpp  main_window.cpp  mainwindow.ui
file_manager/utilities/: error_handler.cpp  logger.cpp
include/core/: file_system.hpp  plugin_interface.hpp  plugin_manager.hpp
include/gui/: file_view.hpp  main_window.hpp
include/utilities/: error_handler.hpp  logger.hpp
plugins/basic_operations/: CMakeLists.txt  metadata.json
plugins/basic_operations/include/: copy_plugin.hpp  delete_plugin.hpp  move_plugin.hpp
plugins/basic_operations/src/: copy_plugin.cpp  delete_plugin.cpp  move_plugin.cpp
plugins/example_plugin/: CMakeLists.txt  metadata.json
plugins/example_plugin/include/: example_plugin.hpp
plugins/example_plugin/src/: example_plugin.cpp
structure/: structure.txt
tests/Error_Handler_Test/: CMakeLists.txt  error_handler_test.cpp
tests/File_system_Test/: CMakeLists.txt  test_file_system_only.cpp
tests/Logger_Test/: CMakeLists.txt  test_logger.cpp
tests/Plugin_Manager_Test/: CMakeLists.txt  test_plugin_manager.cpp
